--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -43,22 +43,18 @@ a:visited {
     color: black;
 }
 
-
 .container {
-    width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
-}
+    text-align: center;}
+
 
 
 
 header {
-    
     background: linear-gradient(
       rgba(0, 0, 0, 0.45), 
-      rgba(0, 0, 0, 0.45)
-    ),
+      rgba(0, 0, 0, 0.45)),
         url(../../images/pexels-photo-196657.jpeg);
     background-size: cover;
     min-height: 100vh;
@@ -132,7 +128,7 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
 
-.profilepic {
+#profilepic {
     border-radius: 50%;
     height: 250px;
     object-fit: cover;
@@ -220,5 +216,38 @@ footer {
         a:hover {
             color: grey;
         }
+    }
+}
+
+@media only screen and (min-width: 1200px)  {
+    .container {
+        width: 1200px;   
+    }
+}
+
+@media (max-width: 768px)  {
+//    .container, header {
+//        
+//    }
+//    header {
+//        div {
+//           padding-top: 0; 
+//        }
+//    }
+    h1 {
+        font-size:2em;
+        padding: 0;
+    }
+    h2 {
+        font-size: 1em;
+        padding: 0;
+    }
+    nav {
+        img {
+            display: none;
+        }
+    }
+    #profilepic {
+        height: 100px;
     }
 }
