optimalization of pics

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -55,7 +55,7 @@ header {
     background: linear-gradient(
       rgba(0, 0, 0, 0.45), 
       rgba(0, 0, 0, 0.45)),
-        url(../../images/pexels-photo-196657.jpeg);
+        url(../../images/header-img.jpeg);
     background-size: cover;
     min-height: 100vh;
     text-align: center;
