--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,61 +1,50 @@
 //* {
 //    border: 1px solid red;
 //}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
-
 h1 {
     font-family: 'Poiret One', sans-serif;
     color: #fff;
     font-size: 6em;
     padding: 40px;
-    text-align: center 
+    text-align: center
 }
-
 h2 {
     font-family: 'Poiret One', sans-serif;
     color: #fff;
     font-size: 4em;
-    text-align: center 
+    text-align: center
 }
-
 h3 {
     font-family: 'Poiret One', sans-serif;
     line-height: 100px;
     font-size: 2em;
 }
-
+h4 {
+    padding: 10px;
+}
 a:link {
     text-decoration: none;
     color: black;
 }
-
 a:hover {
     text-decoration: none;
     color: steelblue;
 }
-
 a:visited {
     text-decoration: none;
     color: black;
 }
-
 .container {
     margin-left: auto;
     margin-right: auto;
-    text-align: center;}
-
-
-
-
+    text-align: center;
+}
 header {
-    background: linear-gradient(
-      rgba(0, 0, 0, 0.45), 
-      rgba(0, 0, 0, 0.45)),
-        url(../../images/header-img.jpeg);
+    background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../../images/header-img.jpeg);
     background-size: cover;
     min-height: 100vh;
     text-align: center;
@@ -64,7 +53,8 @@ header {
     div {
         padding-top: 10vh;
     }
-    button {;
+    button {
+        ;
         background: transparent;
         border: 2px solid #fff;
         padding: 25px;
@@ -72,83 +62,89 @@ header {
         color: #fff;
         margin: 0 auto;
     }
-     button:hover {
-            border: 2px solid darkgrey;
-        }
+    button:hover {
+        border: 2px solid darkgrey;
+    }
 }
-
 section {
     padding: 50px 0;
 }
-
 nav {
-text-align: center;
+    text-align: center;
     line-height: 50px;
+    width: 100%;
+    background-color: #fff;
+    .menu li,
+    ul {
+        display: inline-block;
+    }
     img {
         padding: 50px 45px 0;
-;
     }
 }
-
+.sticky {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    border-bottom: 1px dotted lightgrey;
+    ul.menu li {
+        padding: 0 10px;
+    }
+}
 //.logo {
 //    float: left;
 //        padding: 20px;
 //}
-
 ul.menu {
     li {
-    list-style-type: none;
-    display: inline-block;
-    color: darkgrey;
-    text-transform: uppercase;
-    font-family: 'Dosis', sans-serif; 
-    letter-spacing: 0.5em;
-    padding: 20px;
-    font-size: 0.7em;
-    font-weight: 600;
+        list-style-type: none;
+        display: inline-block;
+        color: darkgrey;
+        text-transform: uppercase;
+        font-family: 'Dosis', sans-serif;
+        letter-spacing: 0.5em;
+        padding: 20px;
+        font-size: 0.7em;
+        font-weight: 600;
     }
-} 
-
+}
 hr {
     border: 0;
     border-top: 1px dotted lightgrey;
-    width:100%;
+    width: 100%;
 }
-
-
 .underline {
     width: 50%;
     margin: 0 auto;
     padding: 50px;
 }
-
 p {
     color: darkgrey;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
 }
-
 #profilepic {
     border-radius: 50%;
     height: 250px;
     object-fit: cover;
     float: left;
 }
-
 .about-text {
     max-width: 60%;
     margin: 0 auto;
-    
     p {
         line-height: 25px;
         padding: 25px;
-        
     }
     img {
         margin: 10px;
     }
     button {
-        display: block;
+        display: inline-block;
         background: #fff;
         border: 1px dotted lightgrey;
         padding: 20px;
@@ -158,7 +154,6 @@ p {
         border: 1px solid lightgrey;
     }
 }
-
 .works {
     border: 1px solid lightgrey;
     width: 250px;
@@ -168,41 +163,139 @@ p {
     filter: grayscale(70%);
     padding: 25px;
 }
-
-
 ul {
     li {
-    list-style-type: none;
-    color: darkgrey;
+        list-style-type: none;
+        color: darkgrey;
     }
-} 
+}
+
+.portfolio-work {
+    border: 1px solid lightgrey;
+    width: 250px;
+    height: 250px;
+    margin: 20px;
+    object-fit: contain;
+    filter: grayscale(70%);
+    padding: 25px;
+    display: inline-block;
+}
+.hovereffect {
+width:100%;
+height:100%;
+float:left;
+overflow:hidden;
+position:relative;
+text-align:center;
+cursor:default;
+    
+    
+}
+
+.hovereffect .overlay {
+width:100%;
+height:100%;
+position:absolute;
+overflow:hidden;
+top:0;
+left:0;
+opacity:0;
+background-color:rgba(0,0,0,0.5);
+-webkit-transition:all .4s ease-in-out;
+transition:all .4s ease-in-out;
+    a:link, a:visited, a:hover {
+        color: #fff;
+    }
+    
+}
+
+.hovereffect img {
+display:block;
+position:relative;
+-webkit-transition:all .4s linear;
+transition:all .4s linear;
+}
+
+.hovereffect h2 {
+text-transform:uppercase;
+color:#fff;
+text-align:center;
+position:relative;
+font-size:17px;
+background:rgba(0,0,0,0.6);
+-webkit-transform:translatey(-100px);
+-ms-transform:translatey(-100px);
+transform:translatey(-100px);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+padding:10px;
+}
+
+.hovereffect a.info {
+text-decoration:none;
+display:inline-block;
+text-transform:uppercase;
+color:#fff;
+border:1px solid #fff;
+background-color:transparent;
+opacity:0;
+filter:alpha(opacity=0);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+margin:50px 0 0;
+padding:7px 14px;
+}
+
+.hovereffect a.info:hover {
+box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+-ms-transform:scale(1.2);
+-webkit-transform:scale(1.2);
+transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+opacity:1;
+filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+opacity:1;
+filter:alpha(opacity=100);
+-ms-transform:translatey(0);
+-webkit-transform:translatey(0);
+transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+-webkit-transition-delay:.2s;
+transition-delay:.2s;
+}
 
 .skills {
     line-height: 50px;
     h4 {
-//        line-height: 4em;
+        //        line-height: 4em;
     }
-        li {
-            padding: 10px; 
-            display: inline;
-            list-style-type: none;
-            border-bottom: 1px dotted lightgrey;
-//            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            margin: 10px;
-            }
-        img {
-            line-height: 20px;
-            padding: 20px 20px 0px;
-        }
-    
+    li {
+        padding: 10px;
+        display: inline;
+        list-style-type: none;
+        border-bottom: 1px dotted lightgrey;
+        //            border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        margin: 10px;
+    }
+    img {
+        line-height: 20px;
+        padding: 20px 20px 0px;
+    }
 }
-
-
 footer {
-    text-align: center; 
-    
+    text-align: center;
     padding: 2em;
     p {
         font-size: 0.8em;
@@ -218,24 +311,22 @@ footer {
         }
     }
 }
-
-@media only screen and (min-width: 1200px)  {
+@media only screen and (min-width: 1200px) {
     .container {
-        width: 1200px;   
+        width: 1200px;
     }
 }
-
-@media (max-width: 768px)  {
-//    .container, header {
-//        
-//    }
-//    header {
-//        div {
-//           padding-top: 0; 
-//        }
-//    }
+@media (max-width: 768px) {
+    //    .container, header {
+    //        
+    //    }
+    //    header {
+    //        div {
+    //           padding-top: 0; 
+    //        }
+    //    }
     h1 {
-        font-size:2em;
+        font-size: 2em;
         padding: 0;
     }
     h2 {
