--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -188,9 +188,7 @@ float:left;
 overflow:hidden;
 position:relative;
 text-align:center;
-    cursor:default; {
-        
-    }
+cursor:default; 
 }
 
 .hovereffect .overlay {
